# steed

./: .gitignore  CMakeLists.txt  LICENCE  README.md  compile_commands.json
.github/: copilot-instructions.md
sources/: main.cpp  physac.h
webport/: index.html
